# agentic-research-engine-oss

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  marketplace.json  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  comparison-request.yml  feature_request.md  plugin_or_domain.md  recipe-bug.yml  recipe-request.yml
.github/workflows/: engine-tests.yml  link-check.yml  recipe-ci.yml
.project/: architecture.md  decisions.md  journal.md  milestones.yaml  project.yaml  risks.yaml  tasks.yaml
.project/archive/: tasks.yaml
.project/archive/sprints/: current.yaml
.project/plans/: research-engine-master-plan.md
comparisons/: README.md
core/: README.md  __init__.py
core/memory/: README.md
core/rag/: BENCHMARKS.md  README.md  __init__.py
core/rag/python/: __init__.py  contextual.py  hybrid.py  rag.py  rerank.py
core/rag/tests/: test_contextual.py  test_hybrid.py  test_rag.py  test_rerank.py
core/sandbox/: README.md
core/tools/: README.md
docs/: architecture.md  domains.md  how-it-works.md  launch-checklist.md  launch-posts.md  paper-draft.md  plugins-skills.md  progress.md  self-learning.md  submit-claude-plugin.md  submit-community-directories.md
engine/: Makefile  README.md  __init__.py  requirements.txt
engine/benchmarks/: RESULTS.md  runner.py
engine/core/: __init__.py  domains.py  memory.py  models.py  pipeline.py  plugins.py  trace.py
engine/domains/: financial.yaml  general.yaml  medical.yaml  papers.yaml  personal_docs.yaml  stock_trading.yaml
engine/examples/: 01_medical_covid_treatment.md  02_paper_contextual_retrieval.md  03_financial_nvda_earnings.md  04_technical_rerank_comparison.md  05_personal_pdf_summary.md
engine/interfaces/: cli.py  common.py  tui.py
engine/interfaces/web/: app.py
engine/mcp/: server.py
engine/mcp/claude_plugin/: README.md
engine/mcp/claude_plugin/.claude-plugin/: plugin.json
engine/tests/: test_benchmarks.py  test_domains.py  test_interfaces.py  test_search_providers.py
foundations/: README.md  what-is-hermes-agent.md  what-is-nemoclaw.md  what-is-openclaw.md  what-is-openshell.md
ops/: README.md  submit-community-directories.md  submit-mcp-registry.md
recipes/: README.md
recipes/by-pattern/rust-mcp-search-tool/: Cargo.toml
recipes/by-use-case/document-qa/beginner/: Makefile  README.md  main.py  requirements.txt  techniques.md  test_main.py
recipes/by-use-case/document-qa/beginner/fixtures/sample_corpus/: pipeline.md  retrieval.md
recipes/by-use-case/research-assistant/: README.md
recipes/by-use-case/research-assistant/beginner/: Makefile  README.md  main.py  requirements.txt  techniques.md  test_main.py
recipes/by-use-case/research-assistant/eval/: Makefile  README.md  ablation.py  dataset.jsonl  scorer.py  test_scorer.py
recipes/by-use-case/research-assistant/production/: Makefile  README.md  main.py  requirements.txt  runbook.md  test_production_main.py
recipes/by-use-case/trading-copilot/: README.md
recipes/by-use-case/trading-copilot/beginner/: Makefile  main.py  requirements.txt  techniques.md  test_main.py  watchlist.example.yaml
recipes/by-use-case/trading-copilot/eval/: Makefile  README.md  backtest.py
recipes/by-use-case/trading-copilot/eval/fixtures/: sample_window.yaml  smoke_window.yaml
recipes/by-use-case/trading-copilot/production/: Makefile  README.md  main.py  requirements.txt  runbook.md  techniques.md  test_production_main.py
recipes/by-use-case/youtube-analyzer/: README.md
scripts/: setup-local-mac.sh  setup-vm-gpu.sh
scripts/searxng/: .env.example  README.md  docker-compose.yml  settings.yml
skills/: README.md
skills/verify-answer/: SKILL.md
tutorials/: 01_engine_api_quickstart.ipynb  02_groq_cloud_inference.ipynb  03_build_your_own_corpus.ipynb  04_mcp_server_from_python.ipynb  05_domain_presets_showcase.ipynb  README.md
